# AI-application

./: main.py  pyproject.toml  short_prompting.py  summarizing_&_editing_text.py  text_generation.py
Building conversations with the OPENAI API/: Chat_roles_and_system_messages.py  multi_turn_conversations.py  utilizing the assistant_role.py
Gradio/: broucher.ipynb  chatui.ipynb  gradio-day1.ipynb  gradio-day2.ipynb
Hugging Face/: day1.ipynb  day2.ipynb  day3.ipynb  day4.ipynb  day5.ipynb  day6.ipynb
Prompt Engineering with the OpenAI API/: Intro_to_prompt_eng_best_pracs.py  stuctured_outputs_&_conditional prompts.py
Prompt Engineering with the OpenAI API/1_Introduction to Prompt Engineering Best Practices/: key_principles.py  stuctured_outputs_&_conditional prompts.py
Prompt Engineering with the OpenAI API/2_Advanced Prompt Engineering Strategies/: 2_multi_step_prompting.py  3_ Chain_of_thought_and_self-consistency_prompting.py  4_Iterative_Prompt_Engineering_and_Refinement.py
Prompt Engineering with the OpenAI API/3_Prompt Engineering for Business Applications/: 1_Text_Summarization_&_expansion.ipynb  2_Text_transformation.ipynb  3_Text_Analysis.ipynb  4_Code_Generation_Explanation.ipynb
Prompt Engineering with the OpenAI API/4_Prompt Engineering for Chatbot Development/: 1_Prompt_Engineering_for_Chatbot_Development.ipynb  2_Role_Playing_Prompts_for_Chatbots.ipynb  3_Incorporating_External_Context.ipynb
Prompt Engineering with the OpenAI API/Advanced Prompt Engineering Strategies/: Few_shot_prompting.py
