[project]
name = "ai-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "gradio>=6.13.0",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
    "requests>=2.33.1",
    "scraper>=0.1.0",
]
