[project]
name = "ai-application"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "datasets>=5.0.0",
    "dotenv>=0.9.9",
    "gradio>=6.13.0",
    "huggingface-hub>=1.12.0",
    "ipykernel>=7.2.0",
    "openai>=2.24.0",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.1",
    "requests>=2.33.1",
    "scraper>=0.1.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]
